--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,33 @@
-# requirements.txt
-flask==3.0.2
-pandas>=2.2.0  # Acepta cualquier versión 2.2.x o superior
-numpy>=1.26.0
-scikit-learn>=1.4.0,<1.7.0  # Acepta cualquier versión desde 1.4.0 hasta antes de 1.7.0
-matplotlib>=3.8.2
+blinker==1.9.0
+click==8.1.8
+colorama==0.4.6
+colour==0.1.5
+contourpy==1.3.1
+cycler==0.12.1
+dtreeviz==2.2.2
+Flask==3.0.2
+fonttools==4.57.0
+graphviz==0.20.3
+iniconfig==2.1.0
+itsdangerous==2.2.0
+Jinja2==3.1.3
+joblib==1.4.2
+kiwisolver==1.4.8
+MarkupSafe==3.0.2
+matplotlib==3.10.1
+numpy==2.2.4
+packaging==24.2
+pandas==2.2.3
+pillow==11.2.1
+pluggy==1.5.0
+pyparsing==3.2.3
+pytest==8.3.5
+python-dateutil==2.9.0.post0
+pytz==2025.2
+scikit-learn==1.5.2
+scipy==1.15.2
 seaborn==0.13.2
-jinja2==3.1.3
+six==1.17.0
+threadpoolctl==3.6.0
+tzdata==2025.2
+Werkzeug==3.1.3
